made grid and hover effect

--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@
   place-items: center;
 }
 #container {
-  width: 60rem;
-  border: 1px solid black;
+  width: 50rem;
+  height: 50rem;
+  border: 1px solid #333;
   display: grid;
   grid-template-rows: repeat(var(--grid-rows),1fr);
-  grid-template-columns: repeat(var(--grid-cols), 1fr);
+  grid-template-columns: repeat(var(--grid-cols), 1fr);  
+}
+.oneGridSquare { 
+  border: 1px solid #333;
 }
