made random colors and some basic styling

--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 *{
   box-sizing: border-box;
 }
+body {
+  background: #377ba8;
+}
 #wrapper {
   display: grid;
   grid-template-rows: auto;
   place-items: center;
+
+}
+h1 {
+  font-size: 4rem;
+  font-family: 'Coming Soon', sans-serif;
+  color: #ffffff;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 #container {
   width: 50rem;
@@ -12,8 +23,22 @@
   border: 1px solid #333;
   display: grid;
   grid-template-rows: repeat(var(--grid-rows),1fr);
-  grid-template-columns: repeat(var(--grid-cols), 1fr);  
+  grid-template-columns: repeat(var(--grid-cols), 1fr); 
+  background-color: #ffffff; 
 }
 .oneGridSquare { 
   border: 1px solid #333;
+}
+
+.btn {
+  color: #ffffff;
+  background-color: inherit;
+  padding: .8rem 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  margin-top: 10px;
+  font-size: 2rem;
+  margin-top: 0;
+  cursor: pointer;
+  font-family: 'Coming Soon', sans-serif;
 }
